Squashed commit of the following:
commit 6e44ed407f7af8b149652f12aaf617541190948a
Author: Martin K. Scherer <m.scherer@fu-berlin.de>
Date:   Fri Dec 8 13:44:58 2017 +0100

    [coor/sources merger] made serializable

commit 9aef49b717d33c0094639e9cc328963978faee84
Author: Martin K. Scherer <m.scherer@fu-berlin.de>
Date:   Fri Dec 8 13:44:32 2017 +0100

    [serializable mixin] only propagate save chain flag, if enabled.

commit 5b2cf515bb0366fed12382c55549729b1e1a101e
Author: marscher <m.scherer@fu-berlin.de>
Date:   Tue Nov 28 17:24:59 2017 +0100

    Revert "wip on serializing topology (instead of top file)"

    This reverts commit aeae2a22aa131c3147e5db2416cc1064c497681c.

commit 604c8e09bffb78fb770dda5fe1bbc2fee552bf07
Author: marscher <m.scherer@fu-berlin.de>
Date:   Tue Nov 28 17:24:03 2017 +0100

    [bmsm] do not add custom serialize fields, because params are handled upstream.

commit 4a8d4b647b79b5d0cea572d5951395bf98ba97c8
Author: marscher <m.scherer@fu-berlin.de>
Date:   Tue Nov 28 17:23:26 2017 +0100

    [serialization_mixin] get parameters of all estimators in hierarchy.

    empty state in set_state and check if it is empty.
    check for exceptions.

commit aeae2a22aa131c3147e5db2416cc1064c497681c
Author: marscher <m.scherer@fu-berlin.de>
Date:   Fri Nov 24 21:13:13 2017 +0100

    wip on serializing topology (instead of top file)

    residues do not yet match...

commit e629cd296ae309abd2ca45d906f411797a6eee2e
Author: marscher <m.scherer@fu-berlin.de>
Date:   Fri Nov 24 20:48:05 2017 +0100

    [jsonpickle-handlers] handle mdtraj.Topology

commit 205e0fb932fbdd9be4fb0d6356bd918d317a2590
Author: marscher <m.scherer@fu-berlin.de>
Date:   Fri Nov 24 15:56:07 2017 +0100

    [bmsm] serialize fields derived from MLMSM, because ctor is not invoked

    upon restoring the object.

commit b3ebbce1c3cb35795f2dfe2ab528ea0743d1a5a4
Merge: d2a5d1f1 19c327b2
Author: Martin K. Scherer <marscher@users.noreply.github.com>
Date:   Wed Nov 22 16:06:33 2017 +0100



--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
     - numpy x.x
     # currently installed as submodule
     #- pybind11
-    - python >=3
+    - python
     - scipy
     - setuptools
   run:
