--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pybind11"]
-	path = pybind11
+	path = contrib/pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "contrib/Catch2"]
+	path = contrib/Catch2
+	url = https://github.com/catchorg/Catch2
