--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ endif()
 add_subdirectory(${CMAKE_SOURCE_DIR}/lib/pybind11)
 
 add_subdirectory(sktime/covariance/util/covar_c)
+add_subdirectory(sktime/clustering)
