[clustering] rename extension _bindings -> _clustering_bindings

--- a/sktime/clustering/CMakeLists.txt
+++ b/sktime/clustering/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(_ext CXX)
+project(_clustering_bindings CXX)
 
 set(SRC src/clustering_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
