--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
     environment:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
+      PYTHONHASHSEED: 0
+      OMP_NUM_THREADS: 2
 
     steps:
       - checkout
@@ -35,13 +37,13 @@ jobs:
   #test:
   #  <<: *defaults
   #  parallelism: 4
-    environment:
-      CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
-      CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
-      PYTHONHASHSEED: 0
-      OMP_NUM_THREADS: 2
+  #  environment:
+  #    CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
+  #    CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
+  #    PYTHONHASHSEED: 0
+  #    OMP_NUM_THREADS: 2
 
-    steps:
+ #   steps:
  #     - checkout
  #     - run: conda config --add channels conda-forge
  #     - run: conda config --set always_yes true
