--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,6 @@ stages:
 - stage: Test
   jobs:
   - template: ./devtools/azure-pipelines-linux.yml
-  - template: ./devtools/azure-pipelines-osx.yml
-  - template: ./devtools/azure-pipelines-win.yml
+  #- template: ./devtools/azure-pipelines-osx.yml
+  #- template: ./devtools/azure-pipelines-win.yml
 
