--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -27,6 +27,7 @@ jobs:
       conda config --set quiet true
       #conda install -y conda=4.7.12 conda-build=3.18.9
       conda create -n build conda-build=3.18.9
+      conda init bash
     displayName: 'Install dependencies'
     continueOnError: false
 
