--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -21,17 +21,5 @@ jobs:
   - bash: sudo install -d -m 0777 /usr/envs
     displayName: Fix Conda permissions
 
-  - bash: |
-      conda config --add channels conda-forge # hightest priority
-      conda config --set always_yes true
-      conda config --set quiet true
-      #conda install -y conda=4.7.12 conda-build=3.18.9
-      conda create -n build conda-build=3.18.9
-    displayName: 'Install dependencies'
-    continueOnError: false
+  - template: conda-setup+build.yml
 
-  - bash: | 
-      source activate build
-      conda build devtools/conda-recipe
-    displayName: 'Build and test'
-    continueOnError: false
