--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -22,4 +22,6 @@ jobs:
     displayName: Fix Conda permissions
 
   - template: conda-setup+build.yml
-  template: test-results.yml
+
+  - template: test-results.yml
+
