--- a/devtools/azure-pipelines-osx.yml
+++ b/devtools/azure-pipelines-osx.yml
@@ -2,7 +2,7 @@ jobs:
 - job:
   displayName: "OS X"
   pool:
-    vmImage: 'macOS-10.13'
+    vmImage: 'macOS-10.14'
   strategy:
     matrix:
       Python37:
@@ -16,12 +16,4 @@ jobs:
   - script: sudo chmod -R 777 /usr/local/miniconda
     displayName: Fix Conda permissions
 
-  - bash: |
-      conda config --add channels conda-forge # hightest priority
-      conda install -y conda=4.7.12 conda-build=3.18.9
-    displayName: 'Install dependencies'
-    continueOnError: false
-
-  - bash: conda build devtools/conda-recipe
-    displayName: 'Build and test'
-    continueOnError: false
+  - template: conda-setup+build.yml
