--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -10,7 +10,10 @@ build:
   script_env:
    - CIRCLE_TEST_REPORTS
    - OMP_NUM_THREADS
+   - CFLAGS
+   - CXXFLAGS
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
+
 requirements:
   build:
     - {{ compiler('c') }}
