--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,5 +3,5 @@ stages:
   jobs:
   - template: ./devtools/azure-pipelines-linux.yml
   - template: ./devtools/azure-pipelines-osx.yml
-  #- template: ./devtools/azure-pipelines-win.yml
+  - template: ./devtools/azure-pipelines-win.yml
 
