try to use activate.bat

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 stages:
 - stage: Test
   jobs:
-  - template: ./devtools/azure-pipelines-linux.yml
-  - template: ./devtools/azure-pipelines-osx.yml
+  #- template: ./devtools/azure-pipelines-linux.yml
+  #- template: ./devtools/azure-pipelines-osx.yml
   - template: ./devtools/azure-pipelines-win.yml
 
