--- a/devtools/azure-pipelines-win.yml
+++ b/devtools/azure-pipelines-win.yml
@@ -10,6 +10,6 @@ jobs:
         
   steps:
   - task: BatchScript@1
-    filename: "$env:CONDA\Scripts\activate.bat" 
+    filename: "$env:CONDA\\Scripts\\activate.bat" 
     displayName: Add conda to PATH
   - template: conda-setup+build.yml
