--- a/devtools/azure-pipelines-win.yml
+++ b/devtools/azure-pipelines-win.yml
@@ -11,7 +11,7 @@ jobs:
   steps:
   - task: BatchScript@1
     inputs:
-      filename: "$env:CONDA\\Scripts\\activate.bat" 
+      filename: "$(CONDA)\\Scripts\\activate.bat" 
       modifyEnvironment: True
     displayName: Add conda to PATH
   - template: conda-setup+build.yml
