disable osx, win build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,8 @@
 stages:
 - stage: Test
   jobs:
-  #- template: ./devtools/azure-pipelines-linux.yml
+  - template: ./devtools/azure-pipelines-linux.yml
+  # TODO: enable 
   #- template: ./devtools/azure-pipelines-osx.yml
-  - template: ./devtools/azure-pipelines-win.yml
+  #- template: ./devtools/azure-pipelines-win.yml
 
