[conda-recipe] do not depend on pybind since we ship it

--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -28,7 +28,8 @@ requirements:
     - scipy
     - setuptools
     - pip
-    - pybind11
+# we ship this in the repo
+#    - pybind11
 
   run:
     #- bhmm >=0.6.3,<0.7
