--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,7 @@
 stages:
 - stage: Test
   jobs:
-  - steps:
-    - checkout: self
-      submodules: true
   - template: ./devtools/azure-pipelines-linux.yml
-  # TODO: enable 
-  #- template: ./devtools/azure-pipelines-osx.yml
+  - template: ./devtools/azure-pipelines-osx.yml
   #- template: ./devtools/azure-pipelines-win.yml
 
