--- a/devtools/azure-pipelines-osx.yml
+++ b/devtools/azure-pipelines-osx.yml
@@ -10,6 +10,7 @@ jobs:
         CONDA_NPY: '1.17'
 
   steps:
+  - template: checkout.yml
   - bash: echo "##vso[task.prependpath]$CONDA/bin"
     displayName: Add conda to PATH
 
