[ci/azure] handle test results

--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -22,12 +22,4 @@ jobs:
     displayName: Fix Conda permissions
 
   - template: conda-setup+build.yml
-
-  #- template: test-results.yml
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
-      testResultsFiles: '**/junit.xml' 
-      searchFolder: '$(HOME)' # Optional
-      failTaskOnFailedTests: true # Optional
-      publishRunAttachments: true # Optional
+  - template: test-results.yml
