--- a/devtools/test-results.yml
+++ b/devtools/test-results.yml
@@ -1,8 +1,9 @@
+steps:
+
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit' # Options: JUnit, NUnit, VSTest, xUnit, cTest
-    testResultsFiles: '**/junit.xml' 
+    testResultsFiles: '**/junit.xml'
     searchFolder: '$(HOME)' # Optional
     failTaskOnFailedTests: true # Optional
     publishRunAttachments: true # Optional
-
