--- a/devtools/azure-pipelines-win.yml
+++ b/devtools/azure-pipelines-win.yml
@@ -7,11 +7,12 @@ jobs:
     matrix:
       Python37:
         CONDA_PY: '3.7'
-        
+
   steps:
   - task: BatchScript@1
     inputs:
-      filename: "$(CONDA)\\Scripts\\activate.bat" 
+      filename: "$(CONDA)\\Scripts\\activate.bat"
       modifyEnvironment: True
     displayName: Add conda to PATH
   - template: conda-setup+build.yml
+  - template: test-results.yml
