[ci/test-reports] publish to agent working dir

--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -3,7 +3,7 @@ steps:
       conda config --add channels conda-forge
       conda config --set always_yes true
       conda config --set quiet true
-      conda install conda-build
+      conda install conda-build conda-verify
     displayName: 'Install dependencies'
     continueOnError: false
   - bash: |
