--- a/devtools/azure-pipelines-osx.yml
+++ b/devtools/azure-pipelines-osx.yml
@@ -16,6 +16,7 @@ jobs:
 
   - script: sudo chmod -R 777 /usr/local/miniconda
     displayName: Fix Conda permissions
+  - script: env
 
   - template: conda-setup+build.yml
   - template: test-results.yml
