--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -39,6 +39,8 @@ requirements:
 test:
   source_files:
     - tests/*
+    # for doctests
+    - sktime/*
   requires:
     - scikit-learn
     - pytest
