--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -12,6 +12,10 @@ jobs:
       Python37:
         CONDA_PY: '3.7'
         CONDA_NPY: '1.17'
+      Python38:
+        CONDA_PY: '3.8'
+        CONDA_NPY: '1.17'
+ 
     maxParallel: 10
 
   steps:
