[bhmm/output models] cpp-ify (wip)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(sktime/covariance/util/covar_c)
 add_subdirectory(sktime/clustering)
 add_subdirectory(sktime/markovprocess)
 add_subdirectory(sktime/markovprocess/bhmm/hidden)
+add_subdirectory(sktime/markovprocess/bhmm/output_models)
