msm generation wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(sktime/clustering)
 add_subdirectory(sktime/markovprocess)
 add_subdirectory(sktime/markovprocess/bhmm/hidden)
 add_subdirectory(sktime/markovprocess/bhmm/output_models)
+add_subdirectory(sktime/markovprocess/generation)
