[markovprocess] reorganize hmm and msm into separate directories, general cleanup of hierarchy

--- a/sktime/markovprocess/_binding/CMakeLists.txt
+++ b/sktime/markovprocess/_binding/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(_markovprocess_bindings CXX)
+project(_bindings CXX)
 
 set(SRC src/markovprocess_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
