--- a/sktime/markovprocess/_bindings/CMakeLists.txt
+++ b/sktime/markovprocess/_bindings/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(_bindings CXX)
+project(_markovprocess_bindings CXX)
 
 set(SRC src/markovprocess_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
