--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,46 +1,20 @@
-# Makefile for Sphinx documentation
+# Minimal makefile for Sphinx documentation
 #
 
-SHELL := /bin/bash
+# You can set these variables from the command line, and also
+# from the environment for the first two.
+SPHINXOPTS    ?=
+SPHINXBUILD   ?= sphinx-build
+SOURCEDIR     = source
+BUILDDIR      = build
 
-# You can set these variables from the command line.
-SPHINXOPTS    = -j8 -v
-SPHINXBUILD   = LANG=C sphinx-build
-PAPER         =
-
-BUILD_DIR?=build
-FILES=
-
-# Internal variables.
-PAPEROPT_a4     = -D latex_paper_size=a4
-PAPEROPT_letter = -D latex_paper_size=letter
-ALLSPHINXOPTS   = -d $(BUILD_DIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
-
-.PHONY: help clean html
-
-#------------------------------------------------------------------------------
-all: html
+# Put it first so that "make" without argument is like "make help".
 help:
-	@echo "Please use \`make <target>' where <target> is one of"
-	@echo "  html      to make standalone HTML files"
-	@echo "  latex     to make LaTeX files, you can set PAPER=a4 or PAPER=letter"
+	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-clean:
-	-rm -rf $(BUILD_DIR)/* source/generated source/api/generated
+.PHONY: help Makefile
 
-html:
-	mkdir -p $(BUILD_DIR)/html $(BUILD_DIR)/doctrees
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILD_DIR)/html $(FILES)
-	@echo
-	@echo "Build finished. The HTML pages are in build/html."
-
-out_dir:
-	mkdir -p source/generated
-
-latex:
-	mkdir -p build/latex build/doctrees
-	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) build/latex $(FILES)
-
-html_check:
-	$(SPHINXBUILD) -b linkcheck $(ALLSPHINXOPTS) build/html $(FILES)
-
+# Catch-all target: route all unknown targets to Sphinx using the new
+# "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
+%: Makefile
+	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
