--- a/sktime/clustering/CMakeLists.txt
+++ b/sktime/clustering/CMakeLists.txt
@@ -2,4 +2,4 @@ project(_clustering_bindings CXX)
 
 set(SRC src/clustering_module.cpp)
 pybind11_add_module(${PROJECT_NAME} ${SRC})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include ${common_includes})
