--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ requires = [
  "numpy>=1.10",
  "Cython",
  "scipy",
- # TODO: include again once https://github.com/pybind/pybind11/issues/1067 is fixed.
- #"pybind11",
- ]
+ "pybind11",
+]
 
