--- a/devtools/conda-setup+build.yml
+++ b/devtools/conda-setup+build.yml
@@ -3,7 +3,13 @@ steps:
       conda config --add channels conda-forge
       conda config --set always_yes true
       conda config --set quiet true
-      conda install conda-build conda-verify
+    displayName: Configure conda
+  - bash: |
+      python -m pip install --upgrade pip
+      conda update --all
+    displayName: Update conda
+  - bash: |
+      conda install conda-build conda-verify pip
     displayName: 'Install dependencies'
     continueOnError: false
   - bash: |
