--- a/devtools/azure-pipelines-win.yml
+++ b/devtools/azure-pipelines-win.yml
@@ -2,13 +2,15 @@ jobs:
 - job:
   displayName: Win
   pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: vs2017-win2016
+    # vmImage: "windows-2019"
   strategy:
     matrix:
       Python37:
         CONDA_PY: '3.7'
 
   steps:
+  - template: checkout.yml
   - task: BatchScript@1
     inputs:
       filename: "$(CONDA)\\Scripts\\activate.bat"
