--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,4 @@ add_subdirectory(sktime/clustering)
 add_subdirectory(sktime/markov/_bindings)
 add_subdirectory(sktime/markov/hmm/_bindings)
 add_subdirectory(sktime/markov/tools/estimation/dense/_bindings)
+add_subdirectory(sktime/markov/tools/estimation/sparse/_bindings)
