--- a/.coveragerc
+++ b/.coveragerc
@@ -7,6 +7,7 @@ omit =
     */**/setup.py
     # omit test directory
     tests/*
+    sktime/_version.py
 
 [run]
 omit =
@@ -16,3 +17,4 @@ omit =
     tests/*
     # omit cython
     */**/*.pyx
+    sktime/_version.py
