[setup] add flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,6 @@ versionfile_build = sktime/_version.py
 tag_prefix = v
 #parentdir_prefix =
 
+[flake8]
+ignore=E24,E121,E123,E126,E226,E704,W503,W504
+max-line-length=120
