[basis ]cpp monomials

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(common_includes "${CMAKE_CURRENT_LIST_DIR}/sktime/src/include")
 add_subdirectory(sktime/data)
 add_subdirectory(sktime/covariance/util/covar_c)
 add_subdirectory(sktime/clustering)
+add_subdirectory(sktime/basis)
 add_subdirectory(sktime/markov/_bindings)
 add_subdirectory(sktime/markov/hmm/_bindings)
 add_subdirectory(sktime/markov/tools/kahandot)
