--- a/docs/Makefile
+++ b/docs/Makefile
@@ -8,6 +8,13 @@ SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = source
 BUILDDIR      = build
 
+current_dir = $(shell pwd)
+ifneq (,$(findstring notebooks,$(SPHINXOPTS))$(findstring notebooks,$(O)))
+  RESULT := ln -f -s $(current_dir)/notebooks $(current_dir)/source/notebooks
+else
+  RESULT := rm -f $(current_dir)/source/notebooks
+endif
+
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
@@ -17,4 +24,5 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	bash -c "$(RESULT)"
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
