[rename] tests refactor 2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,18 @@ cmake_minimum_required(VERSION 3.9)
 set(CMAKE_CXX_STANDARD 14)
 
 if(DEFINED PROJECT_NAME)
-    set(SKTIME_IS_SUBPROJECT ON)
+    set(DEEPTIME_IS_SUBPROJECT ON)
 endif()
-project(sktime LANGUAGES C CXX VERSION 0.0.0)
+project(deeptime LANGUAGES C CXX VERSION 0.0.0)
 
 find_package(OpenMP REQUIRED)
 add_definitions(-DUSE_OPENMP)
 
-if (NOT SKTIME_IS_SUBPROJECT)
-    option(SKTIME_BUILD_TESTING "Build sktime tests" ON)
+if (NOT DEEPTIME_IS_SUBPROJECT)
+    option(DEEPTIME_BUILD_TESTING "Build deeptime tests" ON)
 endif()
 
-if(SKTIME_BUILD_TESTING)
+if(DEEPTIME_BUILD_TESTING)
     if (EXISTS ${CMAKE_CURRENT_LIST_DIR}/lib/Catch2/CMakeLists.txt)
         #add_subdirectory(lib/Catch2)
         #include(${CMAKE_CURRENT_LIST_DIR}/lib/Catch2/contrib/Catch.cmake)
@@ -30,15 +30,15 @@ endif()
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/lib/pybind11)
 
-set(common_includes "${CMAKE_CURRENT_LIST_DIR}/sktime/src/include")
+set(common_includes "${CMAKE_CURRENT_LIST_DIR}/deeptime/src/include")
 
-add_subdirectory(sktime/data)
-add_subdirectory(sktime/covariance/util/covar_c)
-add_subdirectory(sktime/clustering)
-add_subdirectory(sktime/basis)
-add_subdirectory(sktime/markov/_bindings)
-add_subdirectory(sktime/markov/hmm/_bindings)
-add_subdirectory(sktime/markov/tools/kahandot)
-add_subdirectory(sktime/markov/tools/estimation/dense/_bindings)
-add_subdirectory(sktime/markov/tools/estimation/sparse/_bindings)
-add_subdirectory(sktime/markov/tools/estimation/sparse/mle/newton)
+add_subdirectory(deeptime/data)
+add_subdirectory(deeptime/covariance/util/covar_c)
+add_subdirectory(deeptime/clustering)
+add_subdirectory(deeptime/basis)
+add_subdirectory(deeptime/markov/_bindings)
+add_subdirectory(deeptime/markov/hmm/_bindings)
+add_subdirectory(deeptime/markov/tools/kahandot)
+add_subdirectory(deeptime/markov/tools/estimation/dense/_bindings)
+add_subdirectory(deeptime/markov/tools/estimation/sparse/_bindings)
+add_subdirectory(deeptime/markov/tools/estimation/sparse/mle/newton)
