--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,5 @@ requires = [
  "numpy>=1.14",
  "Cython",
  "scipy",
- # TODO: include again once https://github.com/pybind/pybind11/issues/1067 is fixed.
- #"pybind11",
+ "pybind11",
  ]
