fix some compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.9)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 if(DEFINED PROJECT_NAME)
     set(DEEPTIME_IS_SUBPROJECT ON)
@@ -9,6 +9,12 @@ project(deeptime LANGUAGES C CXX VERSION 0.0.0)
 
 find_package(OpenMP REQUIRED)
 add_definitions(-DUSE_OPENMP)
+
+if(MSVC)
+    add_compile_options(/W4 /WX)
+else()
+    add_compile_options(-Wall -Wextra -pedantic -Werror)
+endif()
 
 include("${PYBIND_CMAKE_DIR}/pybind11Config.cmake")
 
