--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,6 +14,12 @@ help:
 
 .PHONY: help Makefile
 
+clean:
+	bash -c "rm -rf source/api/generated"
+	bash -c "rm -rf source/examples"
+	bash -c "rm -rf source/datasets"
+	@$(SPHINXBUILD) -M clean "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
