[docs] index dimreduction

--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -51,5 +51,6 @@ test:
     - pytest-cov
     - pytest-faulthandler
     - pytest-sugar
+    - importlib_metadata
     - mdshare
     - pytorch >=1.1
