--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
 [build-system]
 requires = [
- "setuptools",
- "wheel",
- "numpy>=1.14",
- "Cython",
- "scipy",
- "pybind11",
- ]
+    "setuptools",
+    "wheel",
+    "numpy>=1.14",
+    "Cython",
+    "scipy",
+    "pybind11",
+]
+
+[tool.pytest.ini_options]
+filterwarnings = [
+    "once",
+    "ignore::UserWarning",
+]
