[ci] include Python 3.9 in build matrix

--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -8,13 +8,16 @@ jobs:
     matrix:
       Python36:
         CONDA_PY: '3.6'
-        CONDA_NPY: '1.11'
+        CONDA_NPY: '1.16'
       Python37:
         CONDA_PY: '3.7'
-        CONDA_NPY: '1.17'
+        CONDA_NPY: '1.18'
       Python38:
         CONDA_PY: '3.8'
-        CONDA_NPY: '1.17'
+        CONDA_NPY: '1.19'
+      Python39:
+        CONDA_PY: '3.9'
+        CONDA_NPY: '1.19'
  
     maxParallel: 10
 
