--- a/devtools/azure-pipelines-win.yml
+++ b/devtools/azure-pipelines-win.yml
@@ -8,6 +8,10 @@ jobs:
     matrix:
       Python37:
         CONDA_PY: '3.7'
+        CONDA_NPY: '1.16'
+      Python39:
+        CONDA_PY: '3.9'
+        CONDA_NPY: '1.19'
 
   steps:
   - template: checkout.yml
