[ci/recipe] exclude pybind 2.8.0

--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - pip
     - numpy
     - scipy
-    - pybind11
+    - pybind11 != 2.8.0
     - intel-openmp  # [osx]
     - llvm-openmp  # [osx]
     - libgomp  # [linux]
