--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -28,7 +28,8 @@ requirements:
     - pip
     - numpy
     - scipy
-    - pybind11 != 2.8.0
+    - pybind11 <2.8,>2.8  # [win]
+    - pybind11 <2.8,>2.8  # [not win]
     - intel-openmp  # [osx]
     - llvm-openmp  # [osx]
     - libgomp  # [linux]
