--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - pip
     - numpy
     - scipy
-    - pybind11 <2.8,>2.8  # [win]
+    - pybind11 <2.8.0  # [win]
     - pybind11  # [not win]
     - intel-openmp  # [osx]
     - llvm-openmp  # [osx]
