--- a/devtools/azure-pipelines-win.yml
+++ b/devtools/azure-pipelines-win.yml
@@ -2,7 +2,7 @@ jobs:
 - job:
   displayName: Win
   pool:
-    vmImage: "windows-2019"
+    vmImage: "vs2017-win2016"
   strategy:
     matrix:
       Python37:
