--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "numpy>=1.14", "Cython", "pybind11"]
+requires = ["setuptools", "wheel", "numpy>=1.14", "scipy", "Cython", "pybind11"]
 
 [tool.pytest.ini_options]
 filterwarnings = ["once", "ignore::UserWarning"]
