--- a/devtools/azure-pipelines-linux.yml
+++ b/devtools/azure-pipelines-linux.yml
@@ -16,17 +16,9 @@ jobs:
     maxParallel: 10
 
   steps:
-  - template: checkout.yml
-
   - task: UsePythonVersion@0
     displayName: 'Use Python $(python.version)'
     inputs:
       versionSpec: '$(python.version)'
 
-  - script: pip install nox
-    displayName: 'Install nox'
-
-  - script: nox -s "tests-$(python.version)" -- cov
-    displayName: 'Run nox tests'
-
-  - template: test-results.yml
+  - template: setup+build+test.yml
