have one job each platform for conda

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,3 +4,4 @@ stages:
   - template: ./devtools/azure-pipelines-linux.yml
   - template: ./devtools/azure-pipelines-osx.yml
   - template: ./devtools/azure-pipelines-win.yml
+  - template: ./devtools/azure-pipelines-conda.yml
