--- a/devtools/setup+build+test.yml
+++ b/devtools/setup+build+test.yml
@@ -1,12 +1,10 @@
 steps:
-- checkout: self
-  submodules: true
-  displayName: 'checkout'
+- template: checkout.yml
 
 - script: pip install nox
   displayName: 'Install nox'
 
 - script: nox -s "tests-$(python.version)" -- cov
-  displayName: 'Run nox tests'
+  displayName: 'Run tests'
 
 - template: test-results.yml
