--- a/devtools/azure-pipelines-conda.yml
+++ b/devtools/azure-pipelines-conda.yml
@@ -1,5 +1,5 @@
 jobs:
-- job: 'Linux with conda'
+- job: 'Linux-with-conda'
   pool:
     vmImage: 'Ubuntu-18.04'
   timeoutInMinutes: 360
@@ -9,7 +9,7 @@ jobs:
       displayName: Add conda to PATH
     - template: conda.yml
 
-- job: 'MacOS with conda'
+- job: 'MacOS-with-conda'
   pool:
     vmImage: 'Ubuntu-18.04'
   timeoutInMinutes: 360
@@ -21,7 +21,7 @@ jobs:
       displayName: Take ownership of conda installation
     - template: conda.yml
 
-- job: 'Windows with conda'
+- job: 'Windows-with-conda'
   pool:
     vmImage: 'vs2017-win2016'
 
